# conquestoria

./: .gitignore  AGENTS.md  AUDIO-CREDITS.md  CLAUDE.md  GEMINI.md  README.md  index.html  mise.toml  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.claude/: launch.json  settings.json
.claude/hooks/: block-claire-paths.sh  (+4 more)
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS
docs/: claude-design-sprites-prompt.md  sprite-defect-prompts-2026-05-30.md  sprite-design-system.md
public/: manifest.json  sw.js
scripts/: assert-no-e2e-runtime.mjs  build-run-macos-app.sh  check-accent-loop-endpoints.sh  check-src-rule-violations.sh  check-tauri-macos-artifacts.mjs  gen-voice-manifest.ts  generate-air-trade-sfx.sh  generate-earth-maps.ts  generate-era13-sfx.sh  generate-land-trade-sfx.sh  generate-naval-trader-sfx.sh  generate-network-sfx.sh  generate-pirate-sfx.sh  generate-religion-sfx.sh  generate-tauri-icon.mjs  geo-diagnostic.ts  geo-scan.ts  ottoman-scan.ts  place-civs.ts  pre-commit-checks.sh  pre-commit-guardrails.sh  run-ai-playability-regressions.sh  run-tests-by-tier.sh  run-with-mise.sh  run-with-timeout.mjs  run-wonder-regressions.sh  serialize-sprites.mjs  setup-git-hooks.sh  split-elevenlabs.py  synthesise-elevenlabs.py  synthesise-voice.sh  verify-before-push.sh  version-sw-cache.d.mts  version-sw-cache.mjs
src/: main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: main.integration.test.ts  smoke.test.ts
(+1355 files in other folders)
