[package]
name = "conquestoria"
version = "0.1.0"
description = "Conquestoria"
authors = ["Aaron Fleckenstein"]
edition = "2021"

[lib]
name = "conquestoria_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
